css/theme.scss
/* ... */
a {
  text-decoration: none;
  &:hover {
    text-decoration: underline;
    font-weight: inherit !important;
  }
}

button,
.button,
input[type="submit"] {
  display: flex;
  padding: 14px 24px;
  justify-content: center;
  gap: 16px;
  align-items: center;
  border-radius: 16px;
  border: none;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  background: transparent;
  white-space: nowrap;
  box-shadow: none;

  &:hover {
    text-decoration: none;
  }

  &.white {
    @include button-white;
  }

  &.red {
    @include button-red;
  }

  &.blue {
    @include button-blue;
  }
}

body {
  --color-text: #181a1f;
  background: #fafafa;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  padding: 0;
  &.item {
    article#content {
      background: #fafafa;

      @media screen and (min-width: 769px) {
        .current-image {
          margin-bottom: 8px;
        }
        ul.image-gallery {
          gap: calc(var(--gap-items) / 4);
          li {
            width: calc((100% - 16px) / 3);
          }
        }
      }

      .specs dl {
        display: grid;
        grid-template-columns: 1fr;
        gap: 8px;

        @include breakpoints.up("lg") {
          grid-template-columns: 1fr 1fr;
        }

        & > div {
          display: grid;
          grid-template-columns: 48px 1fr;
          grid-template-areas: "icon key" "icon value";
          padding: 8px;
          gap: 0 16px;
          border-radius: 8px;
          background: #efefef;
          span {
            grid-area: icon;
            justify-self: center;
            align-self: center;
            display: flex;
            height: 22px;
            border-radius: 4px;
            background: #fafafa;
            border: 10px solid #fafafa;
            box-sizing: content-box;
            width: 22px;
            color: #ee3324;
          }
          & > dt,
          & > dd {
            padding: 0;
            margin: 0;
          }
          & > dt {
            grid-area: key;
            font-size: 14px;
          }
          & > dd {
            grid-area: value;
            font-size: 18px;
            font-weight: 500;
          }
        }
      }
      .features ul,
      ul.big-features {
        list-style-type: none;
        padding-left: 0;
        li {
          padding-left: 104px;
          padding-bottom: 8px;
          position: relative;
          &::before {
            content: "";
            width: 24px;
            height: 24px;
            display: block;
            background-image: url("/assets/icons/tick.svg");
            background-position: center center;
            background-repeat: no-repeat;
            background-color: #e1f1f6;
            border-radius: 100%;
            position: absolute;
            left: 64px;
            top: 0;
          }
        }
      }
      .big-specs {
        grid-column: full-width;
        max-width: none;
        background-color: #009dd7;
        color: white;
        @include section-padding;
        padding-left: var(--gap-items);
        padding-right: var(--gap-items);
        line-height: 32px;
        h2 {
          color: white;
        }
        div {
          display: flex;
          flex-direction: row;
          gap: 16px;
          & > dt,
          & > dd {
            padding: 0;
            margin: 0;
          }
          & > dt {
            width: 8rem;
            flex-shrink: 0;
          }
          & > dd {
            text-align: left;
          }
        }
        @include breakpoints.up("lg") {
          grid-area: left;
          padding-left: var(--gap-items);
          padding-right: var(--section-padding-half);
          display: flex;
          flex-direction: column;
          align-items: end;
          div,
          h2 {
            width: min(700px, calc(50vw - (var(--section-padding-half) * 2)));
            color: white;
          }
        }
      }
      .big-features {
        grid-column: full-width;
        max-width: none;
        @include section-padding;
        padding-left: var(--gap-items);
        padding-right: var(--gap-items);
        line-height: 32px;
        @include breakpoints.up("lg") {
          grid-area: right;
          padding-left: 64px;
          padding-right: var(--gap-items);
          display: flex;
          flex-direction: column;
          justify-content: center;
          li {
            width: min(700px, calc(50vw - (var(--section-padding-half) * 2)));
          }
        }
      }
    }
  }
  &.products,
  &.category {
    article#content ul.items li {
      @include card;
      padding: var(--space-4);
    }
  }
  &.locations {
    article#content .cities-we-serve ul.items li {
      @include card;
      width: 367px !important;
      padding-top: 166px;
      gap: 8px;
      .image-link,
      placeholder {
        position: absolute;
        top: 0;
        left: 0;
        width: 367px;
        height: 154px;
        margin: 0;
      }
    }
  }
  & > .cart-icon {
    background: #fafafa;
    &:hover {
      background: #fff;
    }
  }
}

.quote-header {
  @include section-padding;
  text-align: center;
  margin: 0 auto;
  max-width: 500px;
  p {
    text-wrap-style: balance;
  }
}

.quote-footer {
  padding: var(--gap-items);
  display: flex;
  flex-direction: column;
  gap: var(--gap-items);
  ul,
  p {
    padding: 0;
    margin: 0;
  }
  a {
    width: 100%;
    @include button-white;
  }
  ul {
    list-style-type: none;
    li {
      padding: 0 0 8px 40px;
      position: relative;
      &::before {
        content: "";
        width: 24px;
        height: 24px;
        display: block;
        background-image: url("/assets/icons/tick.svg");
        background-position: center center;
        background-repeat: no-repeat;
        background-color: #e1f1f6;
        border-radius: 100%;
        position: absolute;
        left: 0;
        top: 0;
      }
    }
  }
}
/* ... */

